Bug 43767 - [4.6 regression] Revision 158401 failed to bootstrap
Summary: [4.6 regression] Revision 158401 failed to bootstrap
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Jakub Jelinek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-16 13:58 UTC by H.J. Lu
Modified: 2010-06-24 11:33 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments
gcc46-pr43767.patch (422 bytes, patch)
2010-04-16 17:42 UTC, Jakub Jelinek
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-04-16 13:58:08 UTC
On Linux/ia64, revision 158417 gave:

/../src-trunk/libdecnumber -I.  -c ../../src-trunk/libdecnumber/dpd/decimal128.c../../src-trunk/libdecnumber/dpd/decimal128.c: In function 'decimal128ToString':
../../src-trunk/libdecnumber/dpd/decimal128.c:441:3: internal compiler error: Segmentation fault
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.
make[6]: *** [decimal128.o] Error 1
make[6]: Leaving directory `/export/gnu/import/svn/gcc-test/bld/libdecnumber'
make[5]: *** [all-stage2-libdecnumber] Error 2

Revision 158397 is OK.
Comment 1 H.J. Lu 2010-04-16 14:37:34 UTC
Revision 158401:

http://gcc.gnu.org/ml/gcc-cvs/2010-04/msg00507.html

is the cause.
Comment 2 Jakub Jelinek 2010-04-16 15:13:50 UTC
What stage is that?  stage1 or something later?
Comment 3 H.J. Lu 2010-04-16 15:32:01 UTC
(In reply to comment #2)
> What stage is that?  stage1 or something later?
> 

It failed at the end of stage 2:

make[4]: *** [decimal128.o] Error 1
make[3]: *** [all-stage2-libdecnumber] Error 2
make[2]: *** [stage2-bubble] Error 2
make[1]: *** [bootstrap] Error 2
make: *** [bootstrap] Error 2
Comment 4 Jakub Jelinek 2010-04-16 17:41:47 UTC
That's actually the very beginning of stage2 (i.e. what crashes is stage1 gcc, not stage2 gcc).
Comment 5 Jakub Jelinek 2010-04-16 17:42:27 UTC
Created attachment 20401 [details]
gcc46-pr43767.patch

And here is untested fix.
Comment 6 H.J. Lu 2010-04-16 18:08:35 UTC
(In reply to comment #5)
> Created an attachment (id=20401) [edit]
> gcc46-pr43767.patch
> 
> And here is untested fix.
> 

It passed the failed part. I will do a full boostrap. Thanks.
Comment 7 Jakub Jelinek 2010-04-16 21:43:58 UTC
Subject: Bug 43767

Author: jakub
Date: Fri Apr 16 21:43:36 2010
New Revision: 158450

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=158450
Log:
	PR bootstrap/43767
	* alias.c (memrefs_conflict_p): Don't crash if CSELIB_VAL_PTR is NULL.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/alias.c

Comment 8 Jakub Jelinek 2010-06-24 11:33:06 UTC
Fixed.