	PR bootstrap/43767 	* alias.c (memrefs_conflict_p): Don't crash if CSELIB_VAL_PTR is NULL.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@158450 138bc75d-0d04-0410-961f-82ee72b054a4